--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "dev": "next dev",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "babel": {
     "presets": [
