--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "currency-formatter": "^1.5.9",
     "date-fns": "^3.6.0",
+    "glob": "^11.0.0",
     "lucide-react": "^0.428.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
@@ -42,6 +43,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-spinners": "^0.14.1",
+    "rimraf": "^6.0.1",
     "square": "^37.1.1",
     "stripe": "^16.7.0",
     "swiper": "^11.1.9",
@@ -53,8 +55,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
+    "@eslint/config-array": "^0.18.0",
+    "@eslint/object-schema": "^2.1.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/currency-formatter": "^1.5.4",
@@ -65,7 +70,6 @@
     "@types/react-dom": "^18",
     "@types/stripe-v3": "^3.1.33",
     "@types/uuid": "^10.0.0",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "postcss": "^8",
