Fix TypeScript errors

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@plaiceholder/next": "^3.0.0",
     "@prisma/client": "^5.18.0",
     "@stripe/stripe-js": "^4.2.0",
-    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query": "^5.51.24",
     "@tanstack/react-table": "^8.20.1",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
@@ -44,6 +44,7 @@
     "react-paginate": "^8.2.0",
     "react-spinners": "^0.14.1",
     "rimraf": "^6.0.1",
+    "sharp": "^0.33.5",
     "square": "^37.1.1",
     "stripe": "^16.7.0",
     "swiper": "^11.1.9",
