Fix TypeScript errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "dev": "next dev",
     "lint": "next lint",
-    "build": "next build"
+    "build": "next build",
+    "postinstall": "prisma generate"
   },
   "babel": {
     "presets": [
