--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,3 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/next",
-        "config": {
-          "includeFiles": ["src/prisma/schema.prisma"]
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/$1"
-      }
-    ]
-  }
-  
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
